# exn

./: .markdownlint.json  CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
examples/: antipattern.rs  basic.rs  custom-layout.rs  downcast.rs  make-error.rs
src/: error.rs  exn.rs  iter.rs  lib.rs  macros.rs  option.rs  repr.rs  result.rs
src/repr/: anyhow.rs  list.rs  tree.rs
tests/: anyhow.rs  exn.rs
tests/generate/: mod.rs
tests/snapshots/: anyhow__list_repr_list.snap  anyhow__list_repr_tree.snap  anyhow__tree_repr_list.snap  anyhow__tree_repr_tree.snap  exn__bail.snap  exn__ensure_fail.snap  exn__from_error.snap  exn__linear.snap  exn__list_repr_list.snap  exn__list_repr_tree.snap  exn__new_with_source.snap  exn__option_ext.snap  exn__result_ext.snap  exn__tree_error.snap  exn__tree_repr_list.snap  exn__tree_repr_tree.snap
