# Copyright 2026 Andrew Lehmer (github.com/80Ltrumpet)
#
# Copyright 2025 FastLabs Developers
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "exn"
description = "Context-aware Rust `Error` handling"
edition = "2024"
homepage = "https://github.com/80Ltrumpet/exn"
license = "Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/80Ltrumpet/exn"
version = "0.2.0"

[dev-dependencies]
anyhow = "1"
insta = "1"
thiserror = "2"
